# err_x509

./: .gitignore  README.md  build.bat  example_x509_no_fix.yaml  go.mod  main.go  pyproject.toml  quick_test.bat  requirements-dev.txt  requirements.txt  Инструкция.md  Прочитай меня.txt
.github/: upx-exclude.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  release.yml  security.yml  test.yml
docs/: advanced.md  api.md  usage.md
err_x509/: __init__.py  __main__.py  cli.py  config.py  core.py  utils.py  validators.py
scripts/: err_x509.bat  err_x509.ps1  err_x509.sh  install.sh
tests/: __init__.py  test_cli.py  test_core.py  test_utils.py
tests/test_data/: multi_line.yaml  single_line.yaml
